Bug #44397 --> quick fix to the bookmarks problem with create new profile, if the url is about:blank then don't try to instantiate bookmarks just to get a charset! i'm not sure this bookmarks code belongs here anyway. We'll file another bug to get it moved out. r,a=waterson